<resources>
    <string name="app_name">FormIdentitas</string>
    <string name="title_form">Form Identitas Mahasiswa</string>
    <string name="label_nama">Nama Lengkap</string>
    <string name="hint_nama">Masukkan nama...</string>
    <string name="label_gender">Jenis Kelamin</string>
    <string name="gender_laki">Laki-laki</string>
    <string name="gender_perempuan">Perempuan</string>
    <string name="label_hobi">Hobi</string>
    <string name="hobi_membaca">Membaca</string>
    <string name="hobi_coding">Coding</string>
    <string name="hobi_olahraga">Olahraga</string>
    <string name="btn_tampilkan">Tampilkan</string>
    <string name="default_hasil">Hasil identitas akan tampil di sini...</string>
</resources>